# BADChIMP-cpp

./: .gitattributes  .gitignore  BUILD.txt  CMakeLists.txt  CMakeSettings.json  GEOCHEM_BACK.trcinp  LBboundarybasic.h  Makefile.terminal  README.md  TODO.md  bloodbook.ipynb  cmake_install.cmake  main.cpp  make.sh  makefile  read_vtu.cpp  std_tests.cpp  test.inp  test_input.cpp  test_variant.cpp  test_vec_arr.cpp  testout  testout.cpp  testout.hpp
INDICATOR/: main_INDICATOR.cpp
LES/: main_LES.cpp
NEW_GEO/: main_new_geo.cpp
PythonScripts/: Blood.py  blate3.py  blood_geo.py  blood_grid.py  centerline.py  distance_map.py  distance_map_v2.py  geometry_demo.py  geometry_demo_fu.py  laplace_pressure.py  mpiGrid.py  mpiPlot.py  pressure_boundary.py  ransTest1.py  raw2npy.py  read_unstructured_grid.py  relperm_input.py  relperm_input_v2.py  sphericalPorePack.py  sphericalPorePack2-2.py  sphericalPorePack3.py  testMpi.py  viscosity_tabulation.py  viscosity_tabulationDEMO.py  vtklb.py  vtklbNew.py  vtklbregular.py  writeGeoFile.py  writeLatticeFile.py
PythonScripts/bloodfiles/: centerlines.vtp
STD_CASE/: CMakeLists.txt  bdchmp  main_new_geo.cpp
TURBINE/: LBturbineboundary.h  LBturbineforce.h  bdchmp  main_turbine.cpp
TWOPHASE/: main_TWOPHASE.cpp
doc/: codestyle.md  directory_structure.md  documentation.md  fileformat.md  makefile_comments.md  run_ah.do.txt
doc/TestCaseSRT2D/: testcaseKarmanVortex.md
doc/manual/src/: badchimp_manual.tex  references.bib
in-out/: makefile
in-out/src/: Input.P  Input.cpp  Input.h  MPI.P  MPI.cpp  MPI.h  Output.P  Output.cpp  Output.h  main.P  main.cpp
include/: Geo.h  Input.h  LBboundary.h  LBbulk.h  LBcollision.h  LBd2q9.h  LBd3q19.h  LBfield.h  LBgeometry.h  LBglobal.h  LBgrid.h  LBhalfwaybb.h  LBinitiatefield.h  LBiteration.h  LBlattice.h  LBlatticed2q9.h  LBlatticetypes.h  LBmacroscopic.h  LBmodel.h  LBsnippets.h  Mpi_class.h  Output.h  lattice.h  latticeboltzmann.h  vector_func.h
input/mpi/: node_labels.mpi  rank.mpi  rank_0_labels.mpi  rank_1_labels.mpi
src/: CMakeLists.txt  Field.h  Geo.cpp  Geo.h  Geometry.h  IO  IO.h  Input.cpp  Input.h  LBSOLVER  LBSOLVER.h  LBbndmpi.h  LBboundary.cpp  LBboundary.h  LBbulk.cpp  LBbulk.cpp.rmfrommake  LBbulk.h  LBcollision.h  LBcollision2phase.h  LBd2q9.cpp  LBd2q9.h  LBd3q19.cpp  LBd3q19.h  LBfield.cpp  LBfield.h  LBfreeFlowCartesian.h  LBfreeSlipCartesian.h  LBgeometry.cpp  LBgeometry.h  LBglobal.h  LBgrid.cpp  LBgrid.h  LBhalfwaybb.h  LBinitiatefield.h  LBinletoutlet.h  LBiteration.h  LBlattice.cpp  LBlatticed2q9.cpp  LBmacroscopic.h  LBmodel.cpp  (+18 more)
src/advective/: main.cpp
src/blood_flow/: CMakeLists.txt  main.cpp
src/co2/: LBco2help.h  main.cpp
src/dimAveraging/: LBpartial_mixHelp.h  main.cpp
src/indicator/: CMakeLists.txt  main_INDICATOR.cpp
src/inouttest/: main.cpp
src/io/: CMakeLists.txt  Input.cpp  Input.h  Input2.h  Output.cpp  Output.h  README.md  VTK.h  VTKCommon.h  VTKImage.h  VTKUnstructured.h  vector_func.h
src/laplace_fluid/: LBpressureboundary.h  main.cpp
src/laplace_pressure/: LBdiffsuion.h  LBdiffusion.h  main.cpp
src/lbsolver/: CMakeLists.txt  Field.h  Geo.cpp  Geo.h  LBbndmpi.h  LBbounceback.h  LBboundary.h  LBboundary.h.old  LBcollision.h  LBcollision2phase.h  LBd2q9.cpp  LBd2q9.h  LBd3q19.h  LBfield.cpp  LBfield.h  LBfreeFlowCartesian.h  LBfreeSlipCartesian.h  LBfreeslipsolid.h  LBgeometry.h  LBglobal.h  LBglobalforcing.h  LBgrid.h  LBhalfwaybb.h  LBhalfwayhelperclass.h  LBinitiatefield.h  LBinletoutlet.h  LBlatticetypes.h  LBmacroscopic.h  LBmonlatmpi.h  LBnodes.h  LBpressurebnd.h  LBrheology.h  LBsnippets.cpp  LBsnippets.h  LButilities.h  LBvtk.h  tmp.h  vector_func.h
src/les/: CMakeLists.txt  main_LES.cpp
src/new_geo/: CMakeLists.txt  main_new_geo.cpp
src/partial_mix/: LBpartial_mixHelp.h  main.cpp
src/partial_mix2/: #main.cpp#  .#main.cpp  LBpartial_mixHelp.h  main.cpp  mainOLD.cpp
src/polymer/: LBpolymer.h  main.cpp  main_new_geo.cpp
src/polymer_viscosity_tab2/: main.cpp
src/polymer_viscosity_tabulation/: LBpolymer.h  main.cpp
src/rans/: LBBoundaryInterpolation.h  LBBoundaryRans.h  LBrans.h  main.cpp  main.cpp.backup  main_current.cp  main_test.cpp  ransmain.h  test_law_of_the_wall.py
src/rans/PythonScripts/: documentation.md  make_wing_vtk.py  make_wing_vtk_test.py
src/six_dof/: LBrehology.h  LBsixdof.h  LBsixdof.h.backup  main.cpp  main.cpp.backup  main.cpp.pipe
src/six_dof/input/: pipe.py
src/std_case/: LBbouncebackbasic.h  LBboundarybasic.h  LBregularbasic.h  LBregularboundarybasic.h  LBregularboundarybasic3d.h  LBregularboundarybasicII.h  LBregularboundarybasicIII.h  LBsubgridboundary.h  LBsubgridboundaryd.h  main.cpp  main_new_geo.cpp
src/std_one_phase/: main.cpp  main_old.cpp
src/std_one_phase/PythonScripts/: clean_geometry.py  fluid_flow_partial_set.py  generate_geometry_mpi.py  lbrelperm.py  rock_geometry_for_lb.py  write_vtk_geo.ipynb
src/turbine/: CMakeLists.txt  LBturbineboundary.h  LBturbineforce.h  main_turbine.cpp
src/twophase/: CMakeLists.txt  main_TWOPHASE.cpp
test/: mainfast.cpp  mainfast_collision_order.cpp  template_test.cpp
